--- a/src/main/resources/application-poweredge.yml
+++ b/src/main/resources/application-poweredge.yml
@@ -1,43 +1,49 @@
 server:
-    compression:
-        enabled: true
-        mime-types: text/html,text/xml,text/plain,text/css,text/javascript,application/javascript,application/json
-        min-response-size: 1024
-    http2:
-        enabled: true
-    port: 8901
-    servlet:
-        context-path: /kappa-talk
-    ssl:
-        enabled: true
-        enabled-protocols: TLSv1.2
-        key-alias: ${SSL_KEY_ALIAS:}
-        key-password: ${SSL_KEY_PASSWORD:}
-        key-store: classpath:pysga1996.jks
-        key-store-password: ${SSL_KEYSTORE_PASSWORD:}
-        key-store-type: JKS
-        protocol: TLS
+  compression:
+    enabled: true
+    mime-types: text/html,text/xml,text/plain,text/css,text/javascript,application/javascript,application/json
+    min-response-size: 1024
+  http2:
+    enabled: true
+  port: 8901
+  servlet:
+    context-path: /kappa-talk
+  ssl:
+    enabled: true
+    enabled-protocols: TLSv1.2
+    key-alias: ${SSL_KEY_ALIAS:}
+    key-password: ${SSL_KEY_PASSWORD:}
+    key-store: classpath:vengeance.jks
+    key-store-password: ${SSL_KEYSTORE_PASSWORD:}
+    key-store-type: JKS
+    protocol: TLS
 spring:
-    data:
-        mongodb:
-            authentication-database: ${MONGO_AUTH_DB:}
-            database: ${MONGO_DB:}
-            uri: ${MONGO_CONNECTION_URL:}
-    banner:
-        location: banner.txt
-    devtools:
-        add-properties: false
-
+  data:
+    mongodb:
+      authentication-database: ${MONGO_AUTH_DB:}
+      database: ${MONGO_DB:}
+      uri: ${MONGO_CONNECTION_URL:}
+  banner:
+    location: banner.txt
+  main:
+    allow-bean-definition-overriding: true
+  security:
+    oauth2:
+      resourceserver:
+        opaquetoken:
+          introspection-uri: ${AUTH_SERVICE:}
+          client-id: ${CLIENT_ID:}
+          client-secret: ${CLIENT_SECRET:}
 custom:
-    hazelcast-hosts: 172.18.0.2,172.18.0.3,172.18.0.4
-    http-port: 8900
-    https-port: 8901
-    security-policy: CONFIDENTAL
-    connector-scheme: http
-    auth-service: http://localhost:8081/lambda-auth/oauth/check_token
-
+  hazelcast-hosts: ${HOSTS:}
+  http-port: 8900
+  https-port: 8901
+  security-policy: CONFIDENTAL
+  connector-scheme: http
 logging:
-    config: classpath:log4j-spring.xml
+  config: classpath:log4j-spring.xml
+  level:
+    root: info
 
 
 
