--- a/src/main/resources/application-poweredge.yml
+++ b/src/main/resources/application-poweredge.yml
@@ -40,6 +40,7 @@ custom:
   https-port: 8901
   security-policy: CONFIDENTAL
   connector-scheme: http
+  enable-external-broker: false
 logging:
   config: classpath:log4j-spring.xml
   level:
