--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
     <dependency>
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+      <version>3.0.2</version>
     </dependency>
     <dependency>
       <groupId>org.springframework.cloud</groupId>
